@Reynald-Albuquerque-Costa[Task: Projeto incluído]{23/09/2022 22:17}

--- a/BlogAPI/appsettings.json
+++ b/BlogAPI/appsettings.json
@@ -10,6 +10,9 @@
   "ConnectionStringsDev": {
     "DefaultConnection": "Server=localhost; Initial Catalog=db_blog_gen;Trusted_Connection=True;"
 
+  },
+  "Settings": {
+    "Secret": "fedaf7d8863b48e197b9287d492b708e"
   }
 
 }
